--- a/css/map.css
+++ b/css/map.css
@@ -38,9 +38,13 @@
 
 .places {
 	max-width: 300px;
+	max-height: 500px;
 	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 	z-index: 102;
 	position: fixed;
 	top: 15px;
 	right: 15px;
+	background-color: #FFFFFF;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
