--- a/css/map.css
+++ b/css/map.css
@@ -1,50 +1,125 @@
+hr {
+    background: #e6e6e6;
+    height: 1px;
+    border: none;
+    margin-top: 15px;
+    margin-bottom: 0;
+    display: block;
+    -webkit-margin-before: 0.5em;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: auto;
+    -webkit-margin-end: auto;
+}
+
+h3 {
+  margin-top: 0;
+  font-family: 'Lato', sans-serif;
+}
+
+h2 {
+  font-family: 'Lato', sans-serif;
+}
+
+
 .search-bar {
-	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-	max-width: 500px;
-	width: 90%;
-	height: 32px;
-	display: flex;
-	z-index: 101;
-	position: fixed;
-	margin-left: 20px;
-	top: 20px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  max-width: 500px;
+  width: 90%;
+  height: 32px;
+  display: flex;
+  z-index: 101;
+  position: fixed;
+  margin-left: 20px;
+  top: 20px;
 }
 
 .search-area {
-	margin: 0;
-	padding: 0;
-	padding-left: 10px;
-	border: none;
-	font-size: 15px;
-	line-height: 20px;
-	width: 100%;
-	height: 100%;
-	display: block;
-	box-sizing: border-box;
-	outline: 0;
+  margin: 0;
+  padding: 0;
+  padding-left: 10px;
+  border: none;
+  font-size: 15px;
+  line-height: 20px;
+  width: 100%;
+  height: 100%;
+  display: block;
+  box-sizing: border-box;
+  outline: 0;
+}
+
+.search-button {
+  color: #6f6f6f;
+  margin: 0;
+  padding: 0;
+  padding-left: 10px;
+  border: none;
+  font-size: 15px;
+  line-height: 20px;
+  width: 15%;
+  height: 100%;
+  display: block;
+  box-sizing: border-box;
+  outline: 0;
+  background-color: #ededed;
+}
+
+.search-button:hover {
+  background-color: #adadad;
+  color:#ffffff;
 }
 
 .img {
-	margin: 10px;
-	display:inline-block;
+  margin: 10px;
+  display:inline-block;
 }
 
 .contacts {
-	margin: 10px;
-	display:inline-block;
-	line-height: 20px;
+  margin: 10px;
+  display:inline-block;
+  line-height: 20px;
 }
 
-
+.places-header {
+  padding-left: 10px;
+  border-bottom: 1px solid #e6e6e6;
+  max-width: 300px;
+  width: 300px;
+  margin: 0px;
+  padding-top: 15px;
+  padding-bottom: 17px;
+  display: flex;
+  cursor: pointer;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.places-container {
+  width: 300px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  z-index: 102;
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  background-color: #ededed;
+}
 .places {
-	max-width: 300px;
-	max-height: 500px;
-	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-	z-index: 102;
-	position: fixed;
-	top: 15px;
-	right: 15px;
-	background-color: #FFFFFF;
-	overflow-x: hidden;
-	overflow-y: auto;
+  height: 500px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  background-color: #ffffff;
+}
+
+.place-item {
+  padding: 15px;
+  padding-bottom: 0px;
+  padding-top: 25px;
+  background-color: #ffffff;
+}
+
+.place-item:hover {
+  background-color: #f0f0f0;
+}
+
+.place-item-name {
+  font-weight: bold;
 }
