--- a/css/map.css
+++ b/css/map.css
@@ -4,12 +4,16 @@ html, body {
   padding: 0;
 }
 
-#map {
+#wrapper, #page-content-wrapper, #map {
   height: 100%;
+  padding: 0;
 }
 
+.container-fluid, .row {
+  height: 100%;
+}
 hr {
-  background: #e6e6e6;
+  background: #969696;
   height: 1px;
   border: none;
   margin-top: 15px;
@@ -37,9 +41,15 @@ hr {
   display: flex;
   z-index: 101;
   position: fixed;
-  margin-left: 20px;
+  left: 20px;
   top: 20px;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  max-width: 450px;
 }
+
 
 .search-area {
   margin: 0;
@@ -59,7 +69,7 @@ hr {
 }
 
 .places-filter {
-  width: 60%;
+  width: 50%;
 }
 
 .search-button {
@@ -95,22 +105,17 @@ hr {
 }
 
 .places-container {
-  width: 300px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-  z-index: 102;
-  position: fixed;
-  top: 15px;
-  right: 15px;
   background-color: #ededed;
 }
 
 .places-header {
   padding-left: 10px;
-  border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid black;
   margin: 0px;
   padding-top: 15px;
-  padding-bottom: 17px;
+  padding-bottom: 15px;
   display: flex;
+  text-align: center;
 }
 
 .places {
@@ -121,7 +126,6 @@ hr {
 }
 
 .place-item {
-  padding: 15px;
   padding-bottom: 0px;
   padding-top: 25px;
   background-color: #ffffff;
@@ -133,4 +137,60 @@ hr {
 
 .place-item-name {
   font-weight: bold;
+}
+
+.sidebar-nav {
+  width: 100%;
+}
+
+#sidebar-wrapper {
+  background: white;
+}
+
+#menu-toggle {
+  width: 40px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  background-color: #ededed;
+}
+#menu-toggle-list {
+  width: 100%;
+  background-color: #ededed;
+}
+
+#content {
+  max-width: 500px;
+  overflow: hidden;
+}
+
+.sidebar-nav > .sidebar-brand {
+  height: auto;
+}
+
+.error-message {
+  width: 500px;
+  font-family: 'Lato', sans-serif;
+  background-color: white;
+  z-index: 102;
+  top: 45%;
+  right: 30%;
+  position: absolute;
+  text-align: center;
+  font-weight: 700;
+  font-family: 'Lato', sans-serif;
+  font-size: 36px;
+  color: red;
+}
+
+@media(max-width:768px) {
+  .error-message {
+    width: 300px;
+    background-color: white;
+    z-index: 102;
+    top: 45%;
+    right: 15%;
+    position: absolute;
+    text-align: center;
+    font-size: 23px;
+    color: red;
+  }
 }
